# PPA

backend/: .env.example  .gitignore  README.md  agent.py  main.py  mcp_server.py  notes.db  pyproject.toml  setup_auth.py
backend/tools/: calendar.py  email.py  google_auth.py  notes.py  search.py
