[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "logfire[fastapi,openai]>=4.27.0",
    "pydantic-ai>=1.67.0",
    "python-dotenv>=1.2.2",
]
